syntax = "proto3";


// package cr_app;

service OrderSvc {
    rpc List (Empty) returns (OrderList);
    rpc Get (GetRequest) returns (Order);
    rpc Create (CreateRequest) returns (Order);
    rpc Delete (DeleteRequest) returns (Order);
    rpc Update (UpdateRequest) returns (Order);
    rpc CalculateFee (CalculateFeeRequest) returns (CalculatedFee);
}

message Empty {}

message GetRequest {
    string id = 1;
}

message DeleteRequest {
    string id = 1;
}
message CalculateFeeRequest {
    string id = 1;
}

message UpdateRequest {
    string id = 1;
    int64 userId = 2;
    int64 itemId= 3;
    string itemName= 4;
    int64 itemPrice= 5;
    int64 tellerId= 6;
}

message CreateRequest {
    int64 userId = 1;
    int64 itemId= 2;
    string itemName= 3;
    int64 itemPrice= 4;
    int64 tellerId= 5;
}


message OrderList {
       repeated Order orders = 1;
}

message CalculatedFee {
    Order order = 1;
    string totalRentDay = 2;
    string totalPrice = 3;
    
}

message Order {
       int64 id = 1;
       int64 userId = 2;
       int64 itemId= 3;
       string itemName= 4;
       int64 itemPrice= 5;
       int64 tellerId= 6;
       string orderDate= 7;
       string createdAt= 8;
       string updatedAt= 9;
}

// message VerifyRequest {
//     string token = 1;
// }

// message GetUserRequest {
//     string user_id = 1;
// }


// message VerifyResponse {
//     string id = 1;
//     string name = 2;
//     string email = 3;
// }

